--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -26,21 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.0\n",
+      "[notice] To update, run: C:\\Users\\86136\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: numpy in /Users/foobarstein/.local/lib/python3.8/site-packages (1.22.4)\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pandas in /Users/foobarstein/.local/lib/python3.8/site-packages (1.2.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/anaconda3/lib/python3.8/site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: numpy>=1.16.5 in /Users/foobarstein/.local/lib/python3.8/site-packages (from pandas) (1.22.4)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /Users/foobarstein/.local/lib/python3.8/site-packages (from pandas) (2021.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/foobarstein/.local/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.14.0)\n"
+      "Requirement already satisfied: numpy in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (1.23.5)\n",
+      "Requirement already satisfied: pandas in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\86136\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.0\n",
+      "[notice] To update, run: C:\\Users\\86136\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -58,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +95,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# place your code into this Code cell"
+    "# place your code into this Code cell\n",
+    "df = pd.read_csv('data/data.csv')"
    ]
   },
   {
@@ -99,18 +117,362 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Show 5 rows randomly"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race Ethnicity</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Age Adjusted Death Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>Chronic Lower Respiratory Diseases (J40-J47)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>521</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>21.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Diabetes Mellitus (E10-E14)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>409</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>33.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Human Immunodeficiency Virus Disease (HIV: B20...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>162</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>16.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Accidents Except Drug Posioning (V01-X39, X43,...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Not Stated/Unknown</td>\n",
+       "      <td>8</td>\n",
+       "      <td>.</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>966</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Certain Conditions originating in the Perinata...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian and Pacific Islander</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year                                      Leading Cause Sex  \\\n",
+       "597  2013       Chronic Lower Respiratory Diseases (J40-J47)   F   \n",
+       "652  2012                        Diabetes Mellitus (E10-E14)   F   \n",
+       "67   2011  Human Immunodeficiency Virus Disease (HIV: B20...   M   \n",
+       "622  2007  Accidents Except Drug Posioning (V01-X39, X43,...   M   \n",
+       "966  2011  Certain Conditions originating in the Perinata...   M   \n",
+       "\n",
+       "                 Race Ethnicity Deaths Death Rate Age Adjusted Death Rate  \n",
+       "597          White Non-Hispanic    521       36.6                    21.6  \n",
+       "652          Black Non-Hispanic    409       39.1                    33.8  \n",
+       "67                     Hispanic    162       14.1                    16.2  \n",
+       "622          Not Stated/Unknown      8          .                       .  \n",
+       "966  Asian and Pacific Islander     19        3.6                     4.2  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Show eache of the column names and their data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year                        int64\n",
+       "Leading Cause              object\n",
+       "Sex                        object\n",
+       "Race Ethnicity             object\n",
+       "Deaths                     object\n",
+       "Death Rate                 object\n",
+       "Age Adjusted Death Rate    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Show unique features of the data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a.  Leading Causes of Death Distribution  \n",
+    "This step focuses on understanding the different categories within the 'Leading Cause' column. By counting the occurrences of each cause of death, we can identify the most common and the least common causes recorded in the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Leading Cause\n",
+       "Influenza (Flu) and Pneumonia (J09-J18)                                                                                              96\n",
+       "Diseases of Heart (I00-I09, I11, I13, I20-I51)                                                                                       96\n",
+       "Malignant Neoplasms (Cancer: C00-C97)                                                                                                96\n",
+       "All Other Causes                                                                                                                     96\n",
+       "Diabetes Mellitus (E10-E14)                                                                                                          92\n",
+       "Cerebrovascular Disease (Stroke: I60-I69)                                                                                            90\n",
+       "Chronic Lower Respiratory Diseases (J40-J47)                                                                                         88\n",
+       "Accidents Except Drug Posioning (V01-X39, X43, X45-X59, Y85-Y86)                                                                     80\n",
+       "Essential Hypertension and Renal Diseases (I10, I12)                                                                                 75\n",
+       "Human Immunodeficiency Virus Disease (HIV: B20-B24)                                                                                  43\n",
+       "Mental and Behavioral Disorders due to Accidental Poisoning and Other Psychoactive Substance Use (F11-F16, F18-F19, X40-X42, X44)    39\n",
+       "Intentional Self-Harm (Suicide: X60-X84, Y87.0)                                                                                      38\n",
+       "Alzheimer's Disease (G30)                                                                                                            32\n",
+       "Chronic Liver Disease and Cirrhosis (K70, K73)                                                                                       29\n",
+       "Certain Conditions originating in the Perinatal Period (P00-P96)                                                                     26\n",
+       "Assault (Homicide: Y87.1, X85-Y09)                                                                                                   20\n",
+       "Nephritis, Nephrotic Syndrome and Nephrisis (N00-N07, N17-N19, N25-N27)                                                              17\n",
+       "Septicemia (A40-A41)                                                                                                                 13\n",
+       "Congenital Malformations, Deformations, and Chromosomal Abnormalities (Q00-Q99)                                                       8\n",
+       "Viral Hepatitis (B15-B19)                                                                                                             5\n",
+       "Insitu or Benign / Uncertain Neoplasms (D00-D48)                                                                                      5\n",
+       "Atherosclerosis (I70)                                                                                                                 3\n",
+       "Aortic Aneurysm and Dissection (I71)                                                                                                  3\n",
+       "Mental and Behavioral Disorders due to Use of Alcohol (F10)                                                                           2\n",
+       "Tuberculosis (A16-A19)                                                                                                                1\n",
+       "Parkinson's Disease (G20)                                                                                                             1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leading_cause_distribution = df['Leading Cause'].value_counts()\n",
+    "leading_cause_distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b.  Gender Distribution  \n",
+    "Here, we're examining the 'Sex' column to see how the records are distributed between different genders. It provides a basic demographic breakdown and helps us understand if there's a balance between genders within the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex\n",
+       "F    554\n",
+       "M    540\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sex_distribution = df['Sex'].value_counts()\n",
+    "sex_distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c.  Race and Ethnicity Distribution\n",
+    "The 'Race Ethnicity' column categorizes the data by race and ethnicity. Analyzing this column shows the demographic diversity of the dataset and highlights the representation of various racial and ethnic groups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Race Ethnicity\n",
+       "Not Stated/Unknown            200\n",
+       "Other Race/ Ethnicity         186\n",
+       "Black Non-Hispanic            178\n",
+       "Hispanic                      177\n",
+       "Asian and Pacific Islander    177\n",
+       "White Non-Hispanic            176\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "race_ethnicity_distribution = df['Race Ethnicity'].value_counts()\n",
+    "race_ethnicity_distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d.  Year Distribution\n",
+    "By looking at the 'Year' column, we can evaluate the dataset across different time points. This helps us see if certain years have more records than others, which might be indicative of changes in data collection methods or actual trends in mortality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Year\n",
+       "2011    141\n",
+       "2007    141\n",
+       "2010    138\n",
+       "2008    136\n",
+       "2014    136\n",
+       "2009    135\n",
+       "2012    134\n",
+       "2013    133\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_distribution = df['Year'].value_counts()\n",
+    "year_distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e.  Deaths Statistics\n",
+    "In this step, we perform a statistical analysis on the 'Deaths' column, which provides insights into the quantitative aspect of the data such as the total number of deaths recorded, average, range, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     1094\n",
+       "unique     465\n",
+       "top          .\n",
+       "freq       138\n",
+       "Name: Deaths, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deaths_statistics = df['Deaths'].describe()\n",
+    "deaths_statistics"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,6 +487,25 @@
     "\n",
     "**Note**: If you believe that your data set does not require any munging, please explain in detail.  Create Markdown cells that explain your thinking and create Code cells that show any specific structures of the data you refer to in your explanation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -212,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
