--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -491,35 +491,411 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Convert Placeholders to NaN  \n",
+    "Non-numeric placeholders like periods ('.') are not automatically recognized as missing values. Converting these to NaN ensures that all missing data is uniformly recognized by pandas."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.replace('.', pd.NA, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Remove rows with missing values  \n",
+    "After converting placeholders to NaN, we use dropna() to remove any rows that contain missing values, ensuring that the dataset only contains complete records."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race Ethnicity</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Age Adjusted Death Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Cerebrovascular Disease (Stroke: I60-I69)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian and Pacific Islander</td>\n",
+       "      <td>56</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>16.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>Diseases of Heart (I00-I09, I11, I13, I20-I51)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>2365</td>\n",
+       "      <td>226.4</td>\n",
+       "      <td>187.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>903</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Diseases of Heart (I00-I09, I11, I13, I20-I51)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>4507</td>\n",
+       "      <td>318</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Chronic Lower Respiratory Diseases (J40-J47)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Asian and Pacific Islander</td>\n",
+       "      <td>61</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>17.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>585</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Diabetes Mellitus (E10-E14)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>237</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year                                   Leading Cause Sex  \\\n",
+       "719  2007       Cerebrovascular Disease (Stroke: I60-I69)   M   \n",
+       "231  2013  Diseases of Heart (I00-I09, I11, I13, I20-I51)   F   \n",
+       "903  2014  Diseases of Heart (I00-I09, I11, I13, I20-I51)   F   \n",
+       "298  2010    Chronic Lower Respiratory Diseases (J40-J47)   M   \n",
+       "585  2007                     Diabetes Mellitus (E10-E14)   M   \n",
+       "\n",
+       "                 Race Ethnicity Deaths Death Rate Age Adjusted Death Rate  \n",
+       "719  Asian and Pacific Islander     56       11.6                    16.2  \n",
+       "231          Black Non-Hispanic   2365      226.4                   187.3  \n",
+       "903          White Non-Hispanic   4507        318                     161  \n",
+       "298  Asian and Pacific Islander     61       11.7                    17.8  \n",
+       "585          White Non-Hispanic    237       17.7                      15  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove all rows with missing values now that placeholders have been converted\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Display 5 sample rows of the data after removing missing values\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Correct Data Types\n",
+    "Convert the 'Deaths', 'Death Rate', and 'Age Adjusted Death Rate' columns to numeric types, as they are currently object types possibly due to the presence of non-numeric characters."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race Ethnicity</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Age Adjusted Death Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>991</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Diabetes Mellitus (E10-E14)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>228</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Essential Hypertension and Renal Diseases (I10...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>123</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>7.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Accidents Except Drug Posioning (V01-X39, X43,...</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>162</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>7.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>958</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>Accidents Except Drug Posioning (V01-X39, X43,...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>189</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>485</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Chronic Lower Respiratory Diseases (J40-J47)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>204</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>16.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year                                      Leading Cause Sex  \\\n",
+       "991  2014                        Diabetes Mellitus (E10-E14)   F   \n",
+       "101  2007  Essential Hypertension and Renal Diseases (I10...   M   \n",
+       "45   2007  Accidents Except Drug Posioning (V01-X39, X43,...   F   \n",
+       "958  2013  Accidents Except Drug Posioning (V01-X39, X43,...   M   \n",
+       "485  2012       Chronic Lower Respiratory Diseases (J40-J47)   F   \n",
+       "\n",
+       "         Race Ethnicity  Deaths  Death Rate  Age Adjusted Death Rate  \n",
+       "991  White Non-Hispanic     228        16.1                     10.0  \n",
+       "101  White Non-Hispanic     123         9.2                      7.6  \n",
+       "45   White Non-Hispanic     162        11.3                      7.3  \n",
+       "958            Hispanic     189        16.0                     19.0  \n",
+       "485  Black Non-Hispanic     204        19.5                     16.9  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Deaths'] = pd.to_numeric(df['Deaths'], errors='coerce')\n",
+    "df['Death Rate'] = pd.to_numeric(df['Death Rate'], errors='coerce')\n",
+    "df['Age Adjusted Death Rate'] = pd.to_numeric(df['Age Adjusted Death Rate'], errors='coerce')\n",
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Create New Columns if needed\n",
+    "If the dataset analysis would benefit from additional columns, such as a categorization of the 'Death Rate' into low, medium, and high, create these columns."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Leading Cause</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Race Ethnicity</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Age Adjusted Death Rate</th>\n",
+       "      <th>Death Rate Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>848</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Cerebrovascular Disease (Stroke: I60-I69)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>White Non-Hispanic</td>\n",
+       "      <td>379</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>14.9</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Cerebrovascular Disease (Stroke: I60-I69)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>267</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>23.6</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Chronic Lower Respiratory Diseases (J40-J47)</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>220</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Chronic Liver Disease and Cirrhosis (K70, K73)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>143</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1027</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Accidents Except Drug Posioning (V01-X39, X43,...</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Black Non-Hispanic</td>\n",
+       "      <td>146</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Year                                      Leading Cause Sex  \\\n",
+       "848   2008          Cerebrovascular Disease (Stroke: I60-I69)   F   \n",
+       "599   2008          Cerebrovascular Disease (Stroke: I60-I69)   F   \n",
+       "424   2014       Chronic Lower Respiratory Diseases (J40-J47)   F   \n",
+       "237   2012     Chronic Liver Disease and Cirrhosis (K70, K73)   M   \n",
+       "1027  2008  Accidents Except Drug Posioning (V01-X39, X43,...   M   \n",
+       "\n",
+       "          Race Ethnicity  Deaths  Death Rate  Age Adjusted Death Rate  \\\n",
+       "848   White Non-Hispanic     379        26.4                     14.9   \n",
+       "599   Black Non-Hispanic     267        25.5                     23.6   \n",
+       "424   Black Non-Hispanic     220        21.0                     17.9   \n",
+       "237             Hispanic     143        12.2                     15.0   \n",
+       "1027  Black Non-Hispanic     146        17.2                     18.1   \n",
+       "\n",
+       "     Death Rate Category  \n",
+       "848                 High  \n",
+       "599                 High  \n",
+       "424                 High  \n",
+       "237               Medium  \n",
+       "1027              Medium  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins = [0, 10, 20, float('inf')]\n",
+    "labels = ['Low', 'Medium', 'High']\n",
+    "df['Death Rate Category'] = pd.cut(df['Death Rate'], bins=bins, labels=labels)\n",
+    "df.sample(5)"
+   ]
   },
   {
    "cell_type": "markdown",
